k8s/gce-ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: gce
  namespace: default
spec:
  controller: k8s.io/ingress-gce
