k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filedrop-backend
  namespace: default
spec:
  selector:
    app: filedrop-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5500
