k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: filedrop-frontend
spec:
  selector:
    app: filedrop-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
